--- a/src/anyang-1.0/jade/pages/login.jade
+++ b/src/anyang-1.0/jade/pages/login.jade
@@ -5,31 +5,31 @@
       a(href="#")
         img.block-center.img-rounded(src='app/img/logo.png', alt='Image')
     .panel-body
-      p.text-center.pv SIGN IN TO CONTINUE.
+      p.text-center.pv {{ 'page.login.TIP' | translate}}.
       form.form-validate(role='form', ng-submit="login.login()", name='login.loginForm', novalidate='').mb-lg
         .form-group.has-feedback
-          input#exampleInputEmail1.form-control(type='email', name="account_email" placeholder='Enter email', autocomplete="off", ng-model="login.account.email", required='')
+          input#exampleInputEmail1.form-control(type='email', name="account_email" placeholder='{{ "page.login.PLACEHOLDER-CODE" | translate}}', autocomplete="off", ng-model="login.account.email", required='')
           span.fa.fa-envelope.form-control-feedback.text-muted
-          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.required") This field is required
-          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.email") This field must be a valid email address
+          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.required") {{ "page.validator.REQUIRED" | translate}}
+          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.email") {{ "page.validator.EMAIL" | translate}}
         .form-group.has-feedback
-          input#exampleInputPassword1.form-control(type='password', name="account_password" placeholder='Password', ng-model="login.account.password", required='')
+          input#exampleInputPassword1.form-control(type='password', name="account_password" placeholder='{{ "page.login.PLACEHOLDER-PASSWORD" | translate}}', ng-model="login.account.password", required='')
           span.fa.fa-lock.form-control-feedback.text-muted
-          span.text-danger(ng-show="login.loginForm.account_password.$dirty && login.loginForm.account_password.$error.required") This field is required
+          span.text-danger(ng-show="login.loginForm.account_password.$dirty && login.loginForm.account_password.$error.required") {{ "page.validator.REQUIRED" | translate}}
         .clearfix
           .checkbox.c-checkbox.pull-left.mt0
             label
               input(type='checkbox', value='', name="account_remember", ng-model="login.account.remember")
               span.fa.fa-check
-              |  Remember Me
+              |  {{ 'page.login.REMEMBER-ME' | translate}}
           .pull-right
-            a.text-muted(ui-sref="page.recover") Forgot your password?
+            a.text-muted(ui-sref="page.recover") {{ 'page.login.FORGOT-YOUR-PASSWORD' | translate}}?
         
-        button.btn.btn-block.btn-primary.mt-lg(type='submit') Login
+        button.btn.btn-block.btn-primary.mt-lg(type='submit') {{ 'page.login.LOGIN' | translate}}
       
       .alert.alert-danger.text-center(ng-show='login.authMsg') {{login.authMsg}}
-      p.pt-lg.text-center Need to Signup?
-      a(ui-sref="page.register").btn.btn-block.btn-default Register Now
+      p.pt-lg.text-center {{ 'page.login.NEED-SIGN-UP' | translate}}?
+      a(ui-sref="page.register").btn.btn-block.btn-default {{ 'page.login.SIGN-UP-NOW' | translate}}
   // END panel
   .p-lg.text-center
     span &copy; 
