--- a/src/anyang-1.0/jade/views/partials/top-navbar.jade
+++ b/src/anyang-1.0/jade/views/partials/top-navbar.jade
@@ -33,7 +33,7 @@ nav.navbar.topnavbar(role='navigation')
          // END lock screen
         // START lock screen
         li
-          a(href='', title="{{ 'topbar.logout.TITLE' | translate }}")
+          a(ui-sref="page.login", title="{{ 'topbar.logout.TITLE' | translate }}")
             em.icon-logout
         // END lock screen
       // END Left navbar
