--- a/src/anyang-1.0/less/app.less
+++ b/src/anyang-1.0/less/app.less
@@ -39,7 +39,17 @@
 @import "app/breadcrumbs";
 @import "app/loading-bar";
 @import "app/animate";
+@import "app/panels";
 @import "app/user-block";
+
+// Form elements
+@import "app/form-elements";
+@import "app/form-imgcrop";
+@import "app/form-validation";
+@import "app/form-tags";
+@import "app/form-wizard";
+@import "app/uiselect";
+@import "app/code-editor";
 
 // Utilities 
 @import "app/utils";
