--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
@@ -1,1 +1,8 @@
-h3.text-center.text-thin Tab 1
+h3.text-center.text-thin 目标
+.col-xs-12
+    ul.list-unstyled.workitem
+        li.finished 单击行checkbox选中
+        li.finished 目标：编辑（点击或者双击行）
+        li.finished 详情页面载入.
+        li.finished 删除刷新.
+        li 后端取数据
