--- a/src/anyang-1.0/less/app.less
+++ b/src/anyang-1.0/less/app.less
@@ -38,9 +38,12 @@
 @import "app/preloader";
 @import "app/breadcrumbs";
 @import "app/loading-bar";
+@import "app/block-ui";
 @import "app/animate";
 @import "app/panels";
 @import "app/user-block";
+@import "app/grid";
+@import "app/workitem";
 
 // Form elements
 @import "app/form-elements";
