--- a/src/anyang-1.0/jade/pages/login.jade
+++ b/src/anyang-1.0/jade/pages/login.jade
@@ -10,12 +10,12 @@
         .form-group.has-feedback
           input#exampleInputEmail1.form-control(type='email', name="account_email" placeholder='{{ "page.login.PLACEHOLDER-CODE" | translate}}', autocomplete="off", ng-model="login.account.email", required='')
           span.fa.fa-envelope.form-control-feedback.text-muted
-          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.required") {{ "page.validator.REQUIRED" | translate}}
-          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.email") {{ "page.validator.EMAIL" | translate}}
+          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.required") {{ "validator.REQUIRED" | translate}}
+          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.email") {{ "validator.EMAIL" | translate}}
         .form-group.has-feedback
           input#exampleInputPassword1.form-control(type='password', name="account_password" placeholder='{{ "page.login.PLACEHOLDER-PASSWORD" | translate}}', ng-model="login.account.password", required='')
           span.fa.fa-lock.form-control-feedback.text-muted
-          span.text-danger(ng-show="login.loginForm.account_password.$dirty && login.loginForm.account_password.$error.required") {{ "page.validator.REQUIRED" | translate}}
+          span.text-danger(ng-show="login.loginForm.account_password.$dirty && login.loginForm.account_password.$error.required") {{ "validator.REQUIRED" | translate}}
         .clearfix
           .checkbox.c-checkbox.pull-left.mt0
             label
