--- a/src/anyang-1.0/less/app/layout-extra.less
+++ b/src/anyang-1.0/less/app/layout-extra.less
@@ -267,3 +267,12 @@
   }
 
 }
+
+//added by zppro 2016.3.6
+.row{
+  &+.row-split {
+    margin-bottom: @line-height-computed/2;
+    .clearfix;
+  }
+
+}
