--- a/src/anyang-1.0/jade/index.jade
+++ b/src/anyang-1.0/jade/index.jade
@@ -8,7 +8,7 @@ html(lang="en", data-ng-app="anyang")
     meta(name='description', content='{{app.description}}')
     meta(name='keywords', content='app, responsive, angular, bootstrap, dashboard, admin')
 
-    title(data-ng-bind="::pageTitle()") Angle - Angular Bootstrap Admin Template
+    title(data-ng-bind="::pageTitle()") anyang - anyang Bootstrap Admin Template
     // Bootstrap styles
     link(rel='stylesheet', href='app/css/bootstrap.css', data-ng-if="!app.layout.isRTL")
     link(rel='stylesheet', href='app/css/bootstrap-rtl.css', data-ng-if="app.layout.isRTL")
