--- a/src/anyang-1.0/jade/views/app.jade
+++ b/src/anyang-1.0/jade/views/app.jade
@@ -1,5 +1,5 @@
 // top navbar
-header.topnavbar-wrapper(ng-include="'app/views/partials/top-navbar.html'")
+header.topnavbar-wrapper(ng-include="'app/views/partials/top-navbar.html'", ng-controller="TopbarController")
 
 // sidebar
 aside.aside(ng-include="'app/views/partials/sidebar.html'", ng-controller="SidebarController")
