--- a/src/anyang-1.0/jade/pages/login.jade
+++ b/src/anyang-1.0/jade/pages/login.jade
@@ -11,7 +11,7 @@
           input#exampleInputEmail1.form-control(type='email', name="account_email" placeholder='{{ "page.login.PLACEHOLDER-CODE" | translate}}', autocomplete="off", ng-model="login.account.email", required='')
           span.fa.fa-envelope.form-control-feedback.text-muted
           span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.required") {{ "validator.REQUIRED" | translate}}
-          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.email") {{ "validator.EMAIL" | translate}}
+          span.text-danger(ng-show="login.loginForm.account_email.$dirty && login.loginForm.account_email.$error.email") {{ "validator.FORMAT" | translate:{item:"邮箱地址"} }}
         .form-group.has-feedback
           input#exampleInputPassword1.form-control(type='password', name="account_password" placeholder='{{ "page.login.PLACEHOLDER-PASSWORD" | translate}}', ng-model="login.account.password", required='')
           span.fa.fa-lock.form-control-feedback.text-muted
