--- a/src/anyang-1.0/jade/pages/register.jade
+++ b/src/anyang-1.0/jade/pages/register.jade
@@ -12,7 +12,7 @@
           input.form-control(type='email', name="account_email" placeholder='{{ "page.register.PLACEHOLDER-CODE" | translate}}', autocomplete="off", ng-model="reg.account.email", required='')
           span.fa.fa-envelope.form-control-feedback.text-muted
           span.text-danger(ng-show="reg.registerForm.account_email.$dirty && reg.registerForm.account_email.$error.required") {{ "validator.REQUIRED" | translate}}
-          span.text-danger(ng-show="reg.registerForm.account_email.$dirty && reg.registerForm.account_email.$error.email") {{ "validator.EMAIL" | translate}}
+          span.text-danger(ng-show="reg.registerForm.account_email.$dirty && reg.registerForm.account_email.$error.email") {{ "validator.FORMAT" | translate:{item:"邮箱地址"} }}
         .form-group.has-feedback
           label.text-muted {{ 'page.register.TIP-PASSWORD' | translate}}
           input#id-password.form-control(type='password', name="account_password", ng-model="reg.register.password", ng-pattern="/^[a-zA-Z0-9]{6,10}$/", required='')
