--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab1.jade
@@ -1,8 +1,14 @@
 h3.text-center.text-thin 目标
 .col-xs-12
     ul.list-unstyled.workitem
-        li.finished 单击行checkbox选中
-        li.finished 目标：编辑（点击或者双击行）
-        li.finished 详情页面载入.
-        li.finished 删除刷新.
-        li 后端取数据
+        li.finished.text-success 单击行checkbox选中
+        li.finished.text-success 目标：编辑（点击或者双击行）
+        li.finished.text-success 详情页面载入.
+        li.finished.text-success 删除刷新.
+        li.finished.text-success 后端存取数据（2016.3.22-3.23）
+        li.finished.text-success 删除时没有选中任何记录时提醒notify(2016.3.24)
+        li.finished.text-success 保存成功时提醒notify(2016.3.24)
+        li.finished.text-success 切换子系统时菜单打开(2016.3.24)
+        li.finished.text-success 后端数据重复性检查(2016.3.24)
+        li.finished.text-success 服务端分页(2016.3.25)
+        li.text-info 树控件(2016.3.26-)
