--- a/src/anyang-1.0/less/app/form-elements.less
+++ b/src/anyang-1.0/less/app/form-elements.less
@@ -19,7 +19,9 @@
 
 .c-checkbox,
 .c-radio {
-  margin-right: 4px;
+  display:inline-block;
+  ////margin-right: 4px;
+  margin: 0 auto;
   * {
     cursor: pointer;
   }
@@ -59,7 +61,10 @@
       border-radius: 500px;
     }
   }
+}
 
+.c-checkbox + label{
+  font-weight: normal;
 }
 
 
