--- a/src/anyang-1.0/jade/pages/recover.jade
+++ b/src/anyang-1.0/jade/pages/recover.jade
@@ -13,7 +13,7 @@
           input.form-control(type='email', name='email', placeholder='{{ "page.recover.PLACEHOLDER-CODE" | translate}}', autocomplete="off", ng-model="recover.email", required='')
           span.fa.fa-envelope.form-control-feedback.text-muted
           span.text-danger(ng-show="recoverForm.email.$dirty && recoverForm.email.$error.required") {{ "validator.REQUIRED" | translate}}
-          span.text-danger(ng-show="recoverForm.email.$dirty && recoverForm.email.$error.email") {{ "validator.EMAIL" | translate}}
+          span.text-danger(ng-show="recoverForm.email.$dirty && recoverForm.email.$error.email") {{ "validator.FORMAT" | translate:{item:"邮箱地址"} }}
         button.btn.btn-danger.btn-block(type='submit') {{ 'page.recover.RESET' | translate}}
             
   // END panel
