--- a/src/anyang-1.0/jade/index.jade
+++ b/src/anyang-1.0/jade/index.jade
@@ -36,3 +36,15 @@ html(lang="en", data-ng-app="anyang")
       .text-center
         button.btn.btn-danger.mr(type='button', ng-click='confirm("ok")') {{'button.CONFIRM'|translate}}
         button.btn.btn-default(type='button', ng-click="closeThisDialog('cancel')") {{'button.CANCEL'|translate}}
+    script(type='text/ng-template', id="tree-basic-renderer.html")
+      .tree-node.no-select(tree-index="{{tIndex}}",node-index="{{nIndex}}",node-id="{{node._id}}",support-pre-select-or-check,ng-click="vm.trees[tIndex].select(node,$event)",ng-dblclick="vm.trees[tIndex].toggle(nIndex,$event)",ng-init="vm.trees[tIndex].addIndex(nIndex)")
+        i(ng-if="node.children",class="fa",ng-class="{'fa-caret-right':!vm.trees[tIndex].isExpanded(nIndex),'fa-caret-down':vm.trees[tIndex].isExpanded(nIndex)}",ng-click="vm.trees[tIndex].toggle(nIndex,$event)")
+        i(ng-if="!node.children",class="fa",ng-class="{'fa-caret-right':vm.trees[tIndex].mode=='grid'}")
+        .checkbox.c-checkbox(ng-if="vm.trees[tIndex].mode=='check'")
+          label
+            input(type='checkbox',ng-click="vm.trees[tIndex].toggleCheck(nIndex,$event)",ng-model="vm.trees[tIndex].inputCheckedIndex[nIndex]")
+            span.fa.fa-check(ng-class="{'undetermined':vm.trees[tIndex].isUndetermined(nIndex)}")
+        i(class="{{node.icon}}", ng-if="node.icon")
+        span {{node.name}}
+      ul(ng-if="node.children",ng-show="vm.trees[tIndex].isExpanded(nIndex)")
+        li(ng-repeat='node in node.children',ng-include="'tree-basic-renderer.html'",ng-init="nIndex = (nIndex+vm.trees[tIndex].levelSplitChar+$index)")
