--- a/src/anyang-1.0/jade/views/demo-center/grid-basic-details.jade
+++ b/src/anyang-1.0/jade/views/demo-center/grid-basic-details.jade
@@ -1,7 +1,7 @@
 //
    Created by zppro on 16-2-23.
-h3
-    | {{ vm.viewTranslatePath('TITLE') | translate}}
+//h3
+//    | {{ vm.viewTranslatePath('TITLE') | translate}}
 
 form.form-validate.mb-lg(role='form', name="demoForm", novalidate='', ng-submit="vm.doSubmit()")
     .panel
