--- a/src/anyang-1.0/less/app.less
+++ b/src/anyang-1.0/less/app.less
@@ -43,6 +43,7 @@
 @import "app/panels";
 @import "app/user-block";
 @import "app/grid";
+@import "app/tree";
 @import "app/workitem";
 
 // Form elements
