--- a/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
+++ b/src/anyang-1.0/jade/views/partials/offsidebar-tab2.jade
@@ -1,1 +1,21 @@
-h3.text-center.text-thin Tab 2
+h3.text-center.text-thin 目标达成
+.col-xs-12
+    ul.list-unstyled.workitem
+        li.finished.text-success 按照不同租户进行用户查询(2016.4.2)
+        li.finished.text-success 树选择不同节点刷新不同state(2016.4.2)
+        li.finished.text-success 树控件载入后自动check(2016.4.2)
+        li.finished.text-success 根据_id选择树节点(2016.4.2)
+        li.finished.text-success 树控件自动选择触发tree:node:select事件(2016.4.2)
+        li.finished.text-success 树控件载入后自动选中(2016.4.1)
+        li.finished.text-success 树控件选择事件onNodeSelect(2016.4.1)
+        li.finished.text-success 树控件基本功能(2016.3.31)
+        li.finished.text-success 服务端分页(2016.3.25)
+        li.finished.text-success 后端数据重复性检查(2016.3.24)
+        li.finished.text-success 切换子系统时菜单打开(2016.3.24)
+        li.finished.text-success 保存成功时提醒notify(2016.3.24)
+        li.finished.text-success 删除时没有选中任何记录时提醒notify(2016.3.24)
+        li.finished.text-success 后端存取数据（2016.3.22-3.23）
+        li.finished.text-success 删除刷新
+        li.finished.text-success 详情页面载入
+        li.finished.text-success 目标：编辑（点击或者双击行）
+        li.finished.text-success 单击行checkbox选中
