--- a/src/anyang-1.0/less/app/layout.less
+++ b/src/anyang-1.0/less/app/layout.less
@@ -139,8 +139,7 @@ html, body {
 
   > h3,
   > .content-heading,
-  > .subsystem-wrapper > h3,
-  > .subsystem-wrapper > .module-wrapper > h3{
+  >  .module-header-wrapper > h3{
     font-size: @font-size-h3;
     line-height: @headings-line-height;
     color: #929292;
@@ -155,7 +154,34 @@ html, body {
       font-size: 12px;
       color: @text-muted;
     }
+    > span.org-name{
+      font-size: @font-size-h3;
+    }
   }
+
+  >  .module-header-wrapper > h4 {
+    font-size: @font-size-h4;
+    line-height: @headings-line-height;
+    color: #929292;
+    margin: -30px;
+    margin-bottom: 20px;
+    padding: 0px;
+    font-weight: normal;
+    background-color: @content-heading-bg;
+    border-bottom: 1px solid @content-heading-border;
+    > small {
+      display: block;
+      font-size: 12px;
+      color: @text-muted;
+    }
+    > span.org-name{
+      font-size: @font-size-h3;
+    }
+  }
+
+
+
+
   > button, > .btn {
     margin: 10px 10px 0 0;
   }
@@ -171,8 +197,12 @@ html, body {
     //overflow: auto; // required for portlets
     > h3,
     > .content-heading,
-    > .subsystem-wrapper > h3
-    > .subsystem-wrapper > .module-wrapper > h3{
+    >  .module-header-wrapper > h3{
+      margin: -@content-padding;
+      margin-bottom: @content-padding;
+      padding: @content-padding;
+    }
+    >  .module-header-wrapper > h4 {
       margin: -@content-padding;
       margin-bottom: @content-padding;
       padding: @content-padding;
