--- a/src/anyang-1.0/less/app/typo.less
+++ b/src/anyang-1.0/less/app/typo.less
@@ -1,8 +1,9 @@
 /* ========================================================================
    Component: typo.less
  ========================================================================== */
- 
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,400italic);
+
+//故意注释，因为国内无法使用google
+//@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,400italic);
 
 body {
   font-family: "Source Sans Pro", sans-serif;
